--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -16,15 +16,59 @@
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
     "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "from scipy.optimize import curve_fit\n",
+    "from scipy import interpolate\n",
+    "\n",
+    "import itertools\n",
     "\n",
     "import functions_giammi as fugi\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "dir = r\"../PYTHON_graphs/OUTPUTS/Ar_calibration/\"\n",
-    "cmap_viridis = mpl.cm.get_cmap('viridis')\n",
+    "dir = r\"../PYTHON_graphs/OUTPUTS/N2_calibration/\"\n",
+    "cmap_viridis = mpl.cm.get_cmap('viridis')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N2 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/N2_420eV_CR_analysis_N+N+_linear_Arstretch_newE116vpcm_newt0.root\")\n",
+    "# N2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#coincidence MFPAD\n",
+    "phi_mol1D,MFPAD=fugi.import_TH1Dgeneric(N2,\"N+N+/mol_coincidence/elec_hit_0/mol_frame/in_polarization_plane/MFPAD\")\n",
+    "MFPADerr=N2[\"N+N+/mol_coincidence/elec_hit_0/mol_frame/in_polarization_plane/MFPAD\"].errors()\n",
+    "phi_mol2D,ctheta_mol,MFPAD3D=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_coincidence/elec_hit_0/mol_frame/in_polarization_plane/MFPAD3D\")\n",
+    "\n",
+    "#break-up channels\n",
+    "en,KER=fugi.import_TH1Dgeneric(N2,\"N+N+/mol_ion/KER\")\n",
+    "\n",
+    "#rel momenta\n",
+    "p_x,p_y,p_rel_xy=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/p_relx vs p_rely\")\n",
+    "p_y,p_z,p_rel_yz=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/p_rely vs p_relz\")\n",
+    "p_x,p_z,p_rel_xz=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/p_relx vs p_relz\")\n",
+    "\n",
+    "p_ysum,p_zsum,p_sum_yz=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/p_sumy vs p_sumz\")\n",
+    "\n",
+    "#ion momenta\n",
+    "p1_x,p2_x,p12_x=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/ion1_x vs ion2_x\")\n",
+    "p1_y,p2_y,p12_y=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/ion1_y vs ion2_y\")\n",
+    "p1_z,p2_z,p12_z=fugi.import_TH2Dgeneric(N2,\"N+N+/mol_ion/momenta/ion1_z vs ion2_z\")\n",
     "\n"
    ]
   },
@@ -34,14 +78,293 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N2 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/Ar_FULL_analysis.root\")\n",
-    "# N2[\"all_toghether/\"].keys()\n",
-    "# N2[\"all_toghether/\"].classnames()\n",
-    "# N2[\"all_toghether/fish filet y\"].all_members\n",
-    "# N2[\"all_toghether/fish filet y\"].get_values()\n",
-    "# type(N2[\"all_toghether/fish filet y\"])\n",
-    "# N2[\"all_toghether/tof\"].values()\n"
+    "d = np.linspace(10, 11, 50)\n",
+    "KER_masked = np.ma.masked_array(KER,[(en <= 9.8) | (en >= 10.7)] ).compressed()\n",
+    "en_masked = np.ma.masked_array(en,[(en <= 9.8) | (en >= 10.7)] ).compressed()\n",
+    "\n",
+    "mean = sum(en_masked*KER_masked)/sum(KER_masked)\n",
+    "sigma = np.sqrt(sum(KER_masked*(en_masked-mean)**2)/sum(KER_masked))\n",
+    "\n",
+    "def gaus_fit(x,a,x0,sigma):\n",
+    "    return a*np.exp(-(x-x0)**2/(2*sigma**2))\n",
+    "\n",
+    "popt,pcov = curve_fit(gaus_fit,en_masked,KER_masked,p0=[max(KER_masked), mean, sigma])\n",
+    "fit_info = \"Gaussian fit \\n\\u00B5 = %.2f \\nstd = %.2f\" % (mean, sigma)\n",
+    "# fit_info = (f\"Gauss fit: \\u00B5 = {mu:+.2f}, \\u00b2 std = {std:+.2f}\")\n",
+    "\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "ax.plot(en,KER, color=cmap_viridis(0))\n",
+    "ax.plot(en_masked,gaus_fit(en_masked,*popt), color=cmap_viridis(0.3), linewidth=5, alpha = 0.6)\n",
+    "ax.legend(title=fit_info, loc=\"best\")\n",
+    "\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('energy [eV]')\n",
+    "ax.set_xlim([5, 14])\n",
+    "ax.set_ylabel('counts')\n",
+    "ax.ticklabel_format(axis=\"y\",style=\"sci\",scilimits=(0,1))\n",
+    "ax.set_ylim([0, 55000])\n",
+    "ax.grid()\n",
+    "\n",
+    "fig.savefig(dir+\"KER_gaus.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"KER_gaus.svg\", dpi=300, transparent=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tck = interpolate.splrep(phi_mol1D, MFPAD,s=0)\n",
+    "# xnew = np.arange(0, 2*np.pi, np.pi/50)\n",
+    "xnew = np.arange(-180, 180, 0.5)\n",
+    "ynew = interpolate.splev(xnew, tck)\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "# plt.scatter(phi_mol1D/180.*np.pi, MFPAD, color=cmap_viridis(0), s=80)\n",
+    "plt.errorbar(phi_mol1D/180.*np.pi, MFPAD, yerr=MFPADerr, fmt=\"o\", color=cmap_viridis(0), lw= 20, mec='green', ms=7)\n",
+    "plt.plot(xnew/180.*np.pi, ynew, c=\"r\", alpha=0.5)\n",
+    "ax.set_rticks([2000,4000,6000, 8000])  # Less radial ticks\n",
+    "ax.set_yticklabels([])\n",
+    "# ax.set_rti  # Move radial labels away from plotted line\n",
+    "ax.grid(True)\n",
+    "\n",
+    "fig.savefig(dir+\"MFPAD_err.png\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"MFPAD_err.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3D MFPAD\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "aspect=(phi_mol1D.max()/ctheta_mol.max())\n",
+    "# cs=ax.contourf(phi_mol2D,ctheta_mol,MFPAD3D.T,cmap=cmap_temp)\n",
+    "cs=ax.pcolormesh(phi_mol2D,ctheta_mol,MFPAD3D.T,shading='gouraud', cmap=cmap_temp)\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([MFPAD3D.min(),MFPAD3D.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prel\n",
+    "fig,(ax1,ax2,ax3)= plt.subplots(1, 3, figsize=(20, 10), constrained_layout=True)\n",
+    "fig.suptitle(\"Relative momenta $N^{+}-N^{+}$ multiple axis\", y=0.85)\n",
+    "\n",
+    "aspect=(p_x.max()/p_y.max())\n",
+    "\n",
+    "atot =[ax1,ax2,ax3]\n",
+    "\n",
+    "# cs1=ax1.contourf(p_x,p_y,np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3))\n",
+    "# cs2=ax2.contourf(p_x,p_z,np.ma.masked_array(p_rel_xz.T,p_rel_xz.T<3))\n",
+    "# cs3=ax3.contourf(p_y,p_z,np.ma.masked_array(p_rel_yz.T,p_rel_yz.T<3))\n",
+    "\n",
+    "cs1=ax1.pcolormesh(p_x,p_y,np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3), shading='gouraud')\n",
+    "cs2=ax2.pcolormesh(p_x,p_z,np.ma.masked_array(p_rel_xz.T,p_rel_xz.T<3), shading='gouraud')\n",
+    "cs3=ax3.pcolormesh(p_y,p_z,np.ma.masked_array(p_rel_yz.T,p_rel_yz.T<3), shading='gouraud')\n",
+    "\n",
+    "ax1.set_xlabel(r\"relative $momentum_{x}$ [a.u.]\")\n",
+    "ax1.set_ylabel(r\"relative $momentum_{y}$ [a.u.]\")\n",
+    "ax2.set_xlabel(r\"relative $momentum_{z}$ [a.u.]\")\n",
+    "ax2.set_ylabel(r\"relative $momentum_{x}$ [a.u.]\")\n",
+    "ax3.set_xlabel(r\"relative $momentum_{z}$ [a.u.]\")\n",
+    "ax3.set_ylabel(r\"relative $momentum_{y}$ [a.u.]\")\n",
+    "\n",
+    "for a in atot:\n",
+    "    a.set_aspect(aspect)\n",
+    "    a.set_xlim([-120., 120.])\n",
+    "    a.set_ylim([-120., 120.])\n",
+    "    # a.grid()\n",
+    "\n",
+    "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
+    "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
+    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3.min(),p_rel_xz.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"prel_N-N.png\", bbox_inches='tight', dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"prel_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ion relative momenta\n",
+    "fig,(ax1,ax2,ax3)= plt.subplots(1, 3, figsize=(20, 10), constrained_layout=True)\n",
+    "# fig,(ax1,ax2,ax3)= plt.subplots(1, 3, figsize=(20, 10))\n",
+    "fig.suptitle(\"Ion momenta $N^{+}-N^{+}$ multiple axis\", y=0.85)\n",
+    "\n",
+    "aspect=(p_x.max()/p_y.max())\n",
+    "\n",
+    "atot =[ax1,ax2,ax3]\n",
+    "\n",
+    "# cs1=ax1.contourf(p1_x,p2_x,np.ma.masked_array(p12_x.T,p12_x.T<3))\n",
+    "# cs2=ax2.contourf(p1_y,p2_y,np.ma.masked_array(p12_y.T,p12_y.T<3))\n",
+    "# cs3=ax3.contourf(p1_z,p2_z,np.ma.masked_array(p12_z.T,p12_z.T<3))\n",
+    "\n",
+    "cs1=ax1.pcolormesh(p1_x,p2_x,np.ma.masked_array(p12_x.T,p12_x.T<3), shading='gouraud')\n",
+    "cs2=ax2.pcolormesh(p1_y,p2_y,np.ma.masked_array(p12_y.T,p12_y.T<3), shading='gouraud')\n",
+    "cs3=ax3.pcolormesh(p1_z,p2_z,np.ma.masked_array(p12_z.T,p12_z.T<3), shading='gouraud')\n",
+    "\n",
+    "ax1.set_xlabel(r\"$ion1_{x}$ [a.u.]\")\n",
+    "ax1.set_ylabel(r\"$ion2_{x}$ [a.u.]\")\n",
+    "ax2.set_xlabel(r\"$ion1_{y}$ [a.u.]\")\n",
+    "ax2.set_ylabel(r\"$ion2_{y}$ [a.u.]\")\n",
+    "ax3.set_xlabel(r\"$ion1_{z}$ [a.u.]\")\n",
+    "ax3.set_ylabel(r\"$ion2_{z}$ [a.u.]\")\n",
+    "\n",
+    "for a in atot:\n",
+    "    a.set_aspect(aspect)\n",
+    "    a.set_xlim([-140., 140.])\n",
+    "    a.set_ylim([-140., 140.])\n",
+    "    # a.grid()\n",
+    "    a.axline((0, 0), (-1, 1), color='black', linestyle='--', alpha=0.5)\n",
+    "    \n",
+    "# divider = make_axes_locatable(plt.gca())\n",
+    "# cax = divider.append_axes(\"right\", \"5%\", pad=\"3%\")\n",
+    "\n",
+    "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
+    "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
+    "cbar.set_ticks([np.ma.masked_array(p12_z.T,p12_z.T<3).min(),p12_z.max()])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalized counts')\n",
+    "\n",
+    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.animation as animation\n",
+    "\n",
+    "#cartesian product of unique values, (48*36) each\n",
+    "cosphi_MFPAD = np.array(list(itertools.product(ctheta_mol, phi_mol2D)))\n",
+    "\n",
+    "ctheta_full = np.array([col[0] for col in cosphi_MFPAD])\n",
+    "theta_rad = np.arccos(ctheta_full)\n",
+    "\n",
+    "phi_full = np.array([col[1] for col in cosphi_MFPAD])\n",
+    "phi_rad = phi_full * np.pi/180.\n",
+    "\n",
+    "# convertion to cartesian coordinates 1D vectors of shape (2000,1)\n",
+    "x = MFPAD3D.T.reshape(-1) * np.sin(theta_rad) * np.cos(phi_rad)\n",
+    "y = MFPAD3D.T.reshape(-1) * np.sin(theta_rad) * np.sin(phi_rad)\n",
+    "z = MFPAD3D.T.reshape(-1) * ctheta_full\n",
+    "\n",
+    "# distance from the origin for the cmap\n",
+    "# remember do not use math, but np for fast operations on vectors\n",
+    "d = np.sqrt(x**2+y**2+z**2)\n",
+    "\n",
+    "# reshaping to have the right dimension for 3D\n",
+    "X = np.reshape(x, (48, 36))\n",
+    "Y = np.reshape(y, (48, 36))\n",
+    "Z = np.reshape(z, (48, 36))\n",
+    "\n",
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)\n",
+    "\n",
+    "fig = plt.figure(figsize=(20,20))\n",
+    "# fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
+    "ax = fig.add_subplot(111, projection = \"3d\", )\n",
+    "\n",
+    "# ax.scatter(x, y, z, c=d, cmap='viridis', alpha=0.4) # X,Y,Z 1D vectors -> everything ok\n",
+    "# ax.scatter(x, y, z, c=d, cmap='viridis' , s=40) # X,Y,Z 1D vectors -> everything ok\n",
+    "\n",
+    "def init():\n",
+    "    ax.scatter(x, y, z, c=d, cmap='viridis' , s=160)\n",
+    "    ax.set_xlabel('x')\n",
+    "    ax.set_xlim3d(x.min(), x.max())\n",
+    "    ax.set_ylabel('y')\n",
+    "    ax.set_ylim3d(y.min(), y.max())\n",
+    "    ax.set_zlabel('z')\n",
+    "    ax.set_zlim3d(z.min(), z.max())\n",
+    "    ax.title.set_text(\"scattered with contour projections alpha=0.44\")\n",
+    "\n",
+    "    ## the right sostitution is the ax.plot or ax.fill_between (apparently non supported by 3daxes)\n",
+    "    #ax.contourf(X, Y, Z, zdir='z', alpha=0.2, offset=z.min())\n",
+    "    #ax.contourf(X, Y, Z, zdir='y', alpha=0.2, offset=y.max())\n",
+    "    #ax.contourf(X, Y, Z, zdir='x', alpha=0.2, offset=x.min())\n",
+    "    return fig,\n",
+    "\n",
+    "def animate(i):\n",
+    "    ax.view_init(elev=30., azim=3.6*i)\n",
+    "    return fig,\n",
+    "\n",
+    "ani = animation.FuncAnimation(fig, animate, init_func=init,\n",
+    "                               frames=100, interval=100, blit=True)  \n",
+    "\n",
+    "ani.save(\"OUTPUTS/N-N.mp4\", fps =15, writer=\"ffmpeg\")\n",
+    "# HTML(ani.to_html5_video())\n",
+    "plt.show(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import ConvexHull\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "# fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
+    "ax1 = fig.add_subplot(111, projection = \"3d\", )\n",
+    "\n",
+    "points_orig = np.vstack((x, y, z)).T\n",
+    "ind = np.argsort(d)\n",
+    "points= np.take_along_axis(points_orig, np.vstack((ind,ind,ind)).T, axis=0)\n",
+    "\n",
+    "hull=ConvexHull(points, qhull_options=\"QJ Pp\")\n",
+    "\n",
+    "# Plot defining corner points\n",
+    "ax1.plot(points.T[0], points.T[1], points.T[2], \"ko\")\n",
+    "\n",
+    "# 12 = 2 * 6 faces are the simplices (2 simplices per square face)\n",
+    "for s in hull.simplices:\n",
+    "    s = np.append(s, s[0])  # Here we cycle back to the first coordinate\n",
+    "    ax1.plot(points[s, 0], points[s, 1], points[s, 2], \"r-\")\n",
+    "\n",
+    "# Make axis label\n",
+    "for i in [\"x\", \"y\", \"z\"]:\n",
+    "    eval(\"ax.set_{:s}label('{:s}')\".format(i, i))\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
