new displacements of the interaction region

--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -10,6 +10,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
+    "from matplotlib.lines import Line2D\n",
     "%matplotlib inline\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -30,6 +31,24 @@
     "                  convert_float = True)\n",
     "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
     "table.dropna(inplace=True);\n",
+    "\n",
+    "table1 = pd.read_excel('DATA/stregth_of_lenses_energy_el.xlsx',\n",
+    "                  sheet_name = 'Momentum_360NoEL_z4',\n",
+    "                  header = 11,\n",
+    "                  usecols = \"B, C, G, J, Q, P, S, T\",\n",
+    "                  convert_float = True)\n",
+    "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
+    "table1.dropna(inplace=True);\n",
+    "\n",
+    "table2 = pd.read_excel('DATA/stregth_of_lenses_energy_el.xlsx',\n",
+    "                  sheet_name = 'Momentum_360NoEL_y4',\n",
+    "                  header = 11,\n",
+    "                  usecols = \"B, C, G, J, Q, P, S, T\",\n",
+    "                  convert_float = True)\n",
+    "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
+    "table2.dropna(inplace=True);\n",
+    "\n",
+    "\n",
     "dir = r\"../PYTHON_graphs/OUTPUTS/lens_effect/\""
    ]
   },
@@ -39,8 +58,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(table[\"KE\"].values, table[\"TOF\"].values)\n",
-    "plt.xlim([324, 328])"
+    "#select the data ccording to the final KE\n",
+    "# plt.scatter(table[\"KE\"].values, table[\"TOF\"].values)\n",
+    "# plt.scatter(table1[\"KE\"].values, table1[\"TOF\"].values)\n",
+    "plt.scatter(table2[\"KE\"].values, table2[\"TOF\"].values)\n",
+    "plt.xlim([324, 340])"
    ]
   },
   {
@@ -51,8 +73,17 @@
    "source": [
     "#calculate the initial KE from the momenta at the detectors\n",
     "table[\"KE_calc_rnd\"] = table['mom.mag.1'].mul(table['mom.mag.1']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc_rnd')\n",
-    "table[\"KE_calc\"] = table['mom.mag'].mul(table['mom.mag']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc')"
+    "table[\"KE_calc\"] = table['mom.mag'].mul(table['mom.mag']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc')\n",
+    "table1[\"KE_calc_rnd\"] = table1['mom.mag.1'].mul(table1['mom.mag.1']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc_rnd')\n",
+    "table1[\"KE_calc\"] = table1['mom.mag'].mul(table1['mom.mag']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc')\n",
+    "table2[\"KE_calc_rnd\"] = table2['mom.mag.1'].mul(table2['mom.mag.1']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc_rnd')\n",
+    "table2[\"KE_calc\"] = table2['mom.mag'].mul(table2['mom.mag']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -65,7 +96,19 @@
     "first = table[\"KE\"].values < 324\n",
     "second = (table[\"KE\"].values > 324) & (table[\"KE\"].values < 328)\n",
     "third = (table[\"KE\"].values > 328) & (table[\"KE\"].values < 332)\n",
-    "fourth = table[\"KE\"].values > 332"
+    "fourth = table[\"KE\"].values > 332\n",
+    "\n",
+    "first1 = table1[\"KE\"].values < 324\n",
+    "second1 = (table1[\"KE\"].values > 324) & (table1[\"KE\"].values < 328)\n",
+    "third1 = (table1[\"KE\"].values > 328) & (table1[\"KE\"].values < 332)\n",
+    "fourth1 = (table1[\"KE\"].values > 332) & (table1[\"KE\"].values < 336)\n",
+    "fifth1 = table1[\"KE\"].values > 336\n",
+    "\n",
+    "first2 = table2[\"KE\"].values < 324\n",
+    "second2 = (table2[\"KE\"].values > 324) & (table2[\"KE\"].values < 328)\n",
+    "third2 = (table2[\"KE\"].values > 328) & (table2[\"KE\"].values < 332)\n",
+    "fourth2 = (table2[\"KE\"].values > 332) & (table2[\"KE\"].values < 336)\n",
+    "fifth2 = table2[\"KE\"].values > 336"
    ]
   },
   {
@@ -74,9 +117,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#effect of the location\n",
     "second_1 = (table[\"KE\"].values > 324.5) & (table[\"KE\"].values < 325)\n",
     "second_2 = (table[\"KE\"].values > 326) & (table[\"KE\"].values < 326.5)\n",
     "second_3 = (table[\"KE\"].values > 327) & (table[\"KE\"].values < 327.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define the legend for the four energies\n",
+    "custom_lines = [Line2D([0], [0], marker='o' , alpha=0.6, color=cmap_viridis(0.)),\n",
+    "                Line2D([0], [0], marker='o' , alpha=0.6, color=cmap_viridis(.35)),\n",
+    "                Line2D([0], [0], marker='o' , alpha=0.6, color=cmap_viridis(.66)),\n",
+    "                Line2D([0], [0], marker='o' , alpha=0.6, color=cmap_viridis(.88))]"
    ]
   },
   {
@@ -103,28 +160,13 @@
     "ax.set_ylabel('y axis [mm]')\n",
     "ax.set_ylim([-40, 40.])\n",
     "ax.set_aspect(1/28)\n",
+    "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
     "ax.grid()\n",
     "\n",
     "fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False)\n",
     "fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax= plt.subplots(1,figsize=(15, 10))\n",
-    "# plt.suptitle(\"fish\")\n",
-    "ax.scatter(table.loc[second_1, \"TOF\"]*10**3, table.loc[second_1,\"Z\"], alpha=0.6)\n",
-    "ax.scatter(table.loc[second_2, \"TOF\"]*10**3, table.loc[second_2,\"Z\"], alpha=0.6)\n",
-    "ax.scatter(table.loc[second_3, \"TOF\"]*10**3, table.loc[second_3,\"Z\"], alpha=0.6)\n",
-    "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
-    "ax.set_xlabel('tof [ns]')\n",
-    "ax.set_ylabel('y axis [mm]')\n",
-    "# fig.savefig(dir+\"lens_effect_fish.svg\", dpi=144, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_fish.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -138,10 +180,17 @@
     "# ax.scatter(table.loc[second_1,\"cos(theta)_tof.1\"], table.loc[second_1,\"mom.mag.1\"],alpha=0.6)\n",
     "# ax.scatter(table.loc[second_2,\"cos(theta)_tof.1\"], table.loc[second_2,\"mom.mag.1\"],alpha=0.6)\n",
     "# ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"mom.mag.1\"],alpha=0.6)\n",
-    "ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"KE_calc\"]*10**3,alpha=0.6)\n",
+    "\n",
+    "# ax.scatter(table.loc[second_1,\"cos(theta)_tof.1\"], table.loc[second_1,\"KE_calc\"]*10**3,alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_2,\"cos(theta)_tof.1\"], table.loc[second_2,\"KE_calc\"]*10**3,alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"KE_calc\"]*10**3,alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table.loc[second_1, \"TOF_200ps\"]*10**3, table.loc[second_1,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_2, \"TOF_200ps\"]*10**3, table.loc[second_2,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_3, \"TOF_200ps\"]*10**3, table.loc[second_3,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
     "\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_xlim(-1.,1.)\n",
+    "# ax.set_xlim(-1.,1.)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
     "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
     "# fig.savefig(dir+\"lens_effect_cos(theta).png\", dpi=144, transparent=False)"
@@ -171,6 +220,9 @@
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
     "ax.grid()\n",
+    "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
     "fig.savefig(dir+\"lens_effect_cos(theta)_mom.svg\", dpi=300, transparent=False)\n",
     "fig.savefig(dir+\"lens_effect_cos(theta)_mom.png\", dpi=300, transparent=False)"
    ]
@@ -200,9 +252,113 @@
     "ax.set_ylabel('kinetic energy [eV]')\n",
     "ax.set_ylim(0.,15.)\n",
     "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
+    "ax.grid()\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(12, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "ax.scatter(table1.loc[first1, \"TOF_200ps\"]*10**3, table1.loc[first1,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table1.loc[second1, \"TOF_200ps\"]*10**3, table1.loc[second1,\"Z\"], color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table1.loc[third1, \"TOF_200ps\"]*10**3, table1.loc[third1,\"Z\"], color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table1.loc[fourth1, \"TOF_200ps\"]*10**3, table1.loc[fourth1,\"Z\"], color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table1.loc[first1, \"TOF\"]*10**3, table1.loc[first1,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[second1, \"TOF\"]*10**3, table1.loc[second1,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[third1, \"TOF\"]*10**3, table1.loc[third1,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[fourth1, \"TOF\"]*10**3, table1.loc[fourth1,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
+    "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
+    "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_xlim([14.75, 17.4])\n",
+    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylim([-40, 40.])\n",
+    "ax.set_aspect(1/28)\n",
+    "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
+    "ax.grid()\n",
+    "\n",
+    "# fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "ax.scatter(table1.loc[first1, \"cos(theta)_tof.1\"], table1.loc[first1,\"KE_calc_rnd\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table1.loc[second1, \"cos(theta)_tof.1\"], table1.loc[second1,\"KE_calc_rnd\"],color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table1.loc[third1, \"cos(theta)_tof.1\"], table1.loc[third1,\"KE_calc_rnd\"],color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table1.loc[fourth1, \"cos(theta)_tof.1\"], table1.loc[fourth1,\"KE_calc_rnd\"],color= cmap_viridis(0.88), alpha=0.6)\n",
+    "# ax.scatter(table1.loc[fifth1, \"cos(theta)_tof.1\"], table1.loc[fifth1,\"KE_calc_rnd\"],color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table1.loc[first1, \"cos(theta)_tof\"], table1.loc[first1,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[second1, \"cos(theta)_tof\"], table1.loc[second1,\"KE_calc\"],color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[third1, \"cos(theta)_tof\"], table1.loc[third1,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table1.loc[fourth1, \"cos(theta)_tof\"], table1.loc[fourth1,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
+    "\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "# ax.set_xlim(-1.,1.)\n",
+    "ax.set_xlim(-.99,.99)\n",
+    "ax.set_ylabel('kinetic energy [eV]')\n",
+    "ax.set_ylim(0.,15.)\n",
+    "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
     "ax.grid()\n",
     "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)\n",
+    "\n",
+    "#! NOTE: it loses focus and distributions at theta = pi/2 are broaden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "ax.scatter(table2.loc[first2, \"cos(theta)_tof.1\"], table2.loc[first2,\"KE_calc_rnd\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table2.loc[second2, \"cos(theta)_tof.1\"], table2.loc[second2,\"KE_calc_rnd\"],color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table2.loc[third2, \"cos(theta)_tof.1\"], table2.loc[third2,\"KE_calc_rnd\"],color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table2.loc[fourth2, \"cos(theta)_tof.1\"], table2.loc[fourth2,\"KE_calc_rnd\"],color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table2.loc[first2, \"cos(theta)_tof\"], table2.loc[first2,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table2.loc[second2, \"cos(theta)_tof\"], table2.loc[second2,\"KE_calc\"],color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table2.loc[third2, \"cos(theta)_tof\"], table2.loc[third2,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table2.loc[fourth2, \"cos(theta)_tof\"], table2.loc[fourth2,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
+    "\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "# ax.set_xlim(-1.,1.)\n",
+    "ax.set_xlim(-.99,.99)\n",
+    "ax.set_ylabel('kinetic energy [eV]')\n",
+    "ax.set_ylim(0.,15.)\n",
+    "\n",
+    "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
+    "\n",
+    "ax.grid()\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)\n",
+    "\n",
+    "#! NOTE: seems no difference with the z=4"
    ]
   },
   {
